Cleanup of existing features. Added Readme.md for web

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,1 +1,2 @@
-<h1>Hello YHS!</h1>
+<h1>YHS Component service</h1>
+<p>YHS Components are served from <a href="/remoteEntry.js">remoteEntry.js</a></p>
