--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans', Helvetica, Arial,
+    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+  font-size: 14px;
+  color: #353535;
+  background: #f8f9fa;
+  margin: 0;
+  padding: 0;
+}
