wip allocation drawer design

--- a/web/src/app/allocations-drawer/allocations-drawer.component.html
+++ b/web/src/app/allocations-drawer/allocations-drawer.component.html
@@ -1,82 +1,102 @@
 <mat-drawer-container class="flex-primary" [hasBackdrop]="false">
   <mat-drawer #matDrawer mode="over" position="end">
-    <mat-drawer-content>
+    <mat-drawer-content *ngIf="!showDetails">
       <div class="header">
-        <span>{{ selectedRow?.applicationId }} ({{ selectedRow?.allocations?.length }} allocations)</span>
-        <span class="far fa-clipboard copy-btn" (click)="copyLinkToClipboard()"
-          matTooltip="Click to copy the URL to this view" matTooltipShowDelay="500"></span>
+        <span>{{ selectedRow?.applicationId }} ({{ allocDataSource?.data?.length }} instances)</span>
+        <span class="far fa-clipboard copy-btn" (click)="copyLinkToClipboard()" matTooltip="Click to copy the URL to this view" matTooltipShowDelay="500"></span>
         <span class="far fa-solid fa-xmark close-btn" (click)="closeDrawer()"></span>
+
       </div>
       <div class="content">
-
         <mat-table [dataSource]="allocDataSource" matSort #allocSort="matSort">
           <ng-container [matColumnDef]="columnDef.colId" *ngFor="let columnDef of allocColumnDef">
-            <mat-header-cell *matHeaderCellDef mat-sort-header [style.flex]="columnDef?.colWidth || 1">{{
-              columnDef.colName }}</mat-header-cell>
+            <mat-header-cell *matHeaderCellDef mat-sort-header [style.flex]="columnDef?.colWidth || 1">
+              {{ columnDef.colName }}
+            </mat-header-cell>
 
-            <ng-container *ngIf="columnDef.colId === 'priority'; else renderNext_3">
-              <mat-cell class="small" *matCellDef="let element" [style.flex]="columnDef?.colWidth || 1"
-                [title]="element[columnDef.colId]">{{
-                element['priority'] }} </mat-cell>
-            </ng-container>
-
-            <ng-container *ngIf="columnDef.colId === 'log'; else renderNext_3">
-              <mat-cell class="small" *matCellDef="let element" [style.flex]="columnDef?.colWidth || 1"><a
-                  href="{{ externalLogsBaseUrl }}{{ element['applicationId'] }}" target="_blank"
-                  (click)="logClick($event)">Logs</a> </mat-cell>
-            </ng-container>
-
-            <ng-container *ngIf="columnDef.colId === 'resource'; else renderNext_3">
-              <mat-cell *matCellDef="let element" class="allocations-data" [style.flex]="columnDef?.colWidth || 1"
-                matTooltip="
-                          {{element[columnDef.colId]}}" matTooltipShowDelay="500">
-                <ng-container *ngIf="columnDef.colFormatter; else showAllocRowData;">
-                  <ng-container *ngIf="columnDef.colFormatter(element[columnDef.colId]) as colValue">
-                    <ul class="mat-res-ul">
-                      <ng-container *ngFor="let resource of formatResources(colValue); let i = index">
-                        <li class="mat-res-li" *ngIf="i<1">
-                          {{ resource }}
-                        </li>
-                        <li class="mat-res-li" *ngIf="i>=1 && element['expanded']">
-                          {{ resource }}
-                        </li>
+            <mat-cell *matCellDef="let element" [style.flex]="columnDef?.colWidth || 1" [ngClass]="{'ellipsis': !element['expanded']}">
+              <ng-container [ngSwitch]="columnDef.colId">
+                
+                <ng-container *ngSwitchCase="'resource'">
+                  <span matTooltip="{{ element[columnDef.colId] }}" matTooltipShowDelay="500">
+                    <ng-container *ngIf="columnDef.colFormatter; else showAllocRowData;">
+                      <ng-container *ngIf="columnDef.colFormatter(element[columnDef.colId]) as colValue">
+                        <ul class="mat-res-ul">
+                          <ng-container *ngFor="let resource of formatResources(colValue); let i = index">
+                            <li class="mat-res-li" *ngIf="i < 1">{{ resource }}</li>
+                          </ng-container>
+                        </ul>
                       </ng-container>
-                    </ul>
-                  </ng-container>
+                    </ng-container>
+                    <ng-template #showAllocRowData>
+                      {{ element[columnDef.colId] }}
+                    </ng-template>
+                  </span>
                 </ng-container>
-                <ng-template #showAllocRowData>
-                  <span>{{ element[columnDef.colId] }}</span>
-                </ng-template>
-              </mat-cell>
-            </ng-container>
-
-            <ng-template #renderNext_3>
-              <mat-cell *matCellDef="let element" [class]="element['expanded'] ? '' : 'ellipsis'"
-                [style.flex]="columnDef?.colWidth || 1" matTooltip="{{element[columnDef.colId]}}"
-                matTooltipShowDelay="500">{{ element[columnDef.colId] || 'n/a'
-                }}</mat-cell>
-            </ng-template>
+                
+                <ng-container *ngSwitchDefault>
+                  <span matTooltip="{{ element[columnDef.colId] }}" matTooltipShowDelay="500">
+                    {{ element[columnDef.colId] || 'n/a' }}
+                  </span>
+                </ng-container>
+              </ng-container>
+            </mat-cell>
           </ng-container>
 
+          <!-- No records found -->
           <ng-container matColumnDef="noRecord">
             <mat-footer-cell *matFooterCellDef>
               <div class="no-record">No records found</div>
             </mat-footer-cell>
           </ng-container>
 
+          <!-- Table Rows -->
           <mat-header-row *matHeaderRowDef="allocColumnIds"></mat-header-row>
-
-          <mat-row *matRowDef="let row; columns: allocColumnIds; let i = index" (click)="allocationsDetailToggle(i)"
-            [ngClass]="{'even-row': i % 2 === 0, 'row': true}"></mat-row>
-
-          <mat-footer-row *matFooterRowDef="['noRecord']"
-            [ngStyle]="{ display: isAllocDataSourceEmpty() ? '' : 'none' }"></mat-footer-row>
+          <mat-row *matRowDef="let row; columns: allocColumnIds;" (click)="allocationsDetailToggle(row)" [ngClass]="{'even-row': row % 2 === 0, 'row': true}"></mat-row>
+          <mat-footer-row *matFooterRowDef="['noRecord']" [ngStyle]="{ display: isAllocDataSourceEmpty() ? '' : 'none' }"></mat-footer-row>
         </mat-table>
 
-        <mat-paginator #allocationMatPaginator [pageSizeOptions]="[10, 20, 50, 100]" [pageSize]="50"
-          [ngStyle]="{ display: isAllocDataSourceEmpty() ? 'none' : '' }" showFirstLastButtons></mat-paginator>
-
+        <!-- Paginator -->
+        <mat-paginator #allocationMatPaginator [pageSizeOptions]="[10, 20, 50, 100]" [pageSize]="50" [ngStyle]="{ display: isAllocDataSourceEmpty() ? 'none' : '' }" showFirstLastButtons></mat-paginator>
       </div>
     </mat-drawer-content>
+
+
+
+
+    <mat-drawer-content *ngIf="showDetails">
+      <div class="header">
+        <span class="far fa-solid fa-arrow-left arrow-btn" (click)="goBackToTable()"></span>
+        <span>{{ selectedAllocation?.displayName }}</span>
+        <span class="far fa-solid fa-xmark close-btn" (click)="closeDrawer()"></span>
+
+      </div>
+      <mat-table [dataSource]="dataSource">
+
+        <!-- Colonna delle etichette (prima colonna) -->
+        <ng-container matColumnDef="key">
+          <mat-cell *matCellDef="let element" class="label-column"> {{element.key}} </mat-cell>
+        </ng-container>
+      
+        <!-- Colonna dei valori (seconda colonna) -->
+        <ng-container matColumnDef="value">
+          <mat-cell *matCellDef="let element"> 
+            <span *ngIf="element.link; else normalValue">
+              <a href="{{element.link}}" target="_blank">{{element.value}}</a>
+            </span>
+            <ng-template #normalValue>
+              {{element.value}}
+            </ng-template>
+          </mat-cell>
+        </ng-container>
+      
+        <!-- Righe della tabella -->
+        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+      
+      </mat-table>
+        
+    </mat-drawer-content>
+
+
   </mat-drawer>
 </mat-drawer-container>
