--- a/web/src/app/allocations-drawer/allocations-drawer.component.html
+++ b/web/src/app/allocations-drawer/allocations-drawer.component.html
@@ -9,22 +9,22 @@
       </div>
       <div class="content">
         <div class="filters">
-          <mat-form-field>
+          <mat-form-field class="first-field">
+            <mat-select placeholder="Show all instances" [(value)]="selectedInstance" (selectionChange)="applyFilter()">
+              <mat-option value="">Show all instances</mat-option>
+              <mat-option *ngFor="let instance of instances" [value]="instance">{{ instance }}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        
+          <mat-form-field class="right-align">
             <mat-select placeholder="All states" [(value)]="selectedState" (selectionChange)="applyFilter()">
               <mat-option *ngFor="let state of states" [value]="state">{{ state }}</mat-option>
             </mat-select>
           </mat-form-field>
         
-          <mat-form-field>
+          <mat-form-field class="right-align">
             <mat-select placeholder="All nodes" [(value)]="selectedNode" (selectionChange)="applyFilter()">
               <mat-option *ngFor="let node of nodes" [value]="node">{{ node }}</mat-option>
-            </mat-select>
-          </mat-form-field>
-        
-          <mat-form-field>
-            <mat-select placeholder="Show all instances" [(value)]="selectedInstance" (selectionChange)="applyFilter()">
-              <mat-option value="">Show all instances</mat-option>
-              <mat-option *ngFor="let instance of instances" [value]="instance">{{ instance }}</mat-option>
             </mat-select>
           </mat-form-field>
         </div>
