Rename 'yunikorn' to 'unicorn' for this project's references
Change all references of
  'yunikorn history server' => 'unicorn history server'
  'yhs' => 'uhs'

including variations with different character cases, interstitial
punctuation, etc.

Fixes https://github.com/G-Research/unicorn-history-server/issues/312

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -8,8 +8,8 @@
         <img src="assets/images/github-mark.svg" alt="github" />
       </div>
       <div class="nav-item">
-        <a href="https://github.com/G-Research/yunikorn-history-server" target="_blank"
-          >Yunikorn History Server</a
+        <a href="https://github.com/G-Research/unicorn-history-server" target="_blank"
+          >Unicorn History Server</a
         >
       </div>
     </div>
@@ -21,13 +21,13 @@
       </div>
       <div class="hero-text">
         <p>
-          Yunikorn History Server (YHS) is an ancillary service for K8S Clusters using the Yunikorn
+          Unicorn History Server (UHS) is an ancillary service for K8S Clusters using the Yunikorn
           Scheduler to persist the state of a Yunikorn-managed cluster to a database, allowing for
           long-term access to historical data of the cluster's operations (e.g. to view past
           Applications, resource usage, etc.).
         </p>
 
-        <a href="https://github.com/G-Research/yunikorn-history-server" target="_blank"
+        <a href="https://github.com/G-Research/unicorn-history-server" target="_blank"
           >Get Started</a
         >
       </div>
@@ -35,7 +35,7 @@
     <div class="docs">
       <h2>Web Setup</h2>
       <p>
-        YHS Web is utilising a
+        UHS Web is utilising a
         <a href="https://nx.dev/concepts/module-federation/module-federation-and-nx" target="_blank"
           >Module Federation</a
         >
